samples/_failures_safe/1761216888_354f61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f333efab.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_f333efab.c:138:5: error: expected expression at end of input
  138 |     printf("Found %d entries\n",
      |     ^~~~~~
./samples/SAFE/__tmp_f333efab.c:138:5: error: expected declaration or statement at end of input
